# ai-practitioner-dev-os

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  MY_STACK.md  README.md  SECURITY.md  SETUP.md  STACK.md
.claude/: README.md
.claude/agents/: README.md  builder.md  coach.md  evaluator.md  planner.md  researcher.md  reviewer.md
.claude/commands/: README.md  adapt-path.md  add-best-practice.md  catalog.md  debug-learning.md  evaluate.md  harden.md  plan-week.md  publish.md  retro.md  ship-mvp.md  start-week.md  status.md
.claude/hooks/: README.md  post_week_review.sh  pre_publish_check.sh  pre_week_start.sh
.claude/mcp/: README.md  example_client.py  example_server.py  examples.md  safety.md  tool-contracts.md  tool_contracts.md
.claude/mcp/client_examples/: README.md  python_client.py
.claude/mcp/server_stub/: README.md  server.py
.claude/memory/: README.md  best_practices.md  decisions.jsonl  learner_profile.json  progress_log.jsonl
.claude/path-engine/: README.md  adapt.py  evaluate.py  report.py
.claude/skills/: README.md  api-shipping-checklist.md  baseline-model-and-card.md  eda-to-insight.md  eda.md  experiment-plan.md  forecasting-checklist.md  k8s-deploy-checklist.md  observability-starter.md  rag-eval.md  rag-with-evals.md  shipping-api.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  monthly_journal.md  question.md
.github/workflows/: ci.yml
docs/: agents.md  commands.md  hooks.md  how-to-use.md  memory-system.md  skills-playbook.md  system-overview.md
docs/evaluation/: adaptation-rules.md  rubric.md  scoring.md  signals.md
docs/publishing/: how-to-demo.md  how-to-write-medium-post.md  portfolio-checklist.md
examples/: README.md  command_usage.md  evaluation_demo.py  memory_operations.py
examples/mini-example/: README.md  main.py  pyproject.toml  test_main.py
examples/mini-example/data/: sample_reviews.json
examples/mini-example/src/: README.md  data.py  model.py  predict.py  serve.py  train.py
examples/mini-example/tests/: README.md  test_api.py  test_model.py  test_predict.py  test_train.py
paths/Advanced/: README.md  tracker.md
paths/Advanced/journal/: .gitkeep
paths/Advanced/month-01/: README.md
paths/Advanced/month-02/: README.md
paths/Advanced/month-03/: README.md
paths/Advanced/month-04/: README.md
paths/Advanced/month-05/: README.md
paths/Advanced/month-06/: README.md
paths/Advanced/month-07/: README.md
paths/Advanced/month-08/: README.md
paths/Advanced/month-09/: README.md
paths/Advanced/month-10/: README.md
paths/Advanced/month-11/: README.md
paths/Advanced/month-12/: README.md
paths/Beginner/: README.md  tracker.md
paths/Beginner/journal/: README.md  monthly-template.md  weekly-template.md
paths/Beginner/month-01/: README.md
paths/Beginner/month-02/: README.md
paths/Beginner/month-03/: README.md
paths/Beginner/month-04/: README.md
paths/Beginner/month-05/: README.md
paths/Beginner/month-06/: README.md
paths/Beginner/month-07/: README.md
paths/Beginner/month-08/: README.md
paths/Beginner/month-09/: README.md
paths/Beginner/month-10/: README.md
paths/Beginner/month-11/: README.md
paths/Beginner/month-12/: README.md
paths/advanced/: README.md  tracker.md
paths/advanced/journal/: README.md  monthly-template.md  weekly-template.md
paths/advanced/month-01/: README.md
paths/advanced/month-02/: README.md
paths/advanced/month-03/: README.md
paths/advanced/month-04/: README.md
paths/advanced/month-05/: README.md
paths/advanced/month-06/: README.md
paths/advanced/month-07/: README.md
paths/advanced/month-08/: README.md
paths/advanced/month-09/: README.md
paths/advanced/month-10/: README.md
paths/advanced/month-11/: README.md
paths/advanced/month-12/: README.md
paths/beginner/: README.md  tracker.md
stacks/: tier-1-beginner.md  tier-2-intermediate.md  tier-3-advanced.md  tiers.md
templates/template-data-pipeline/: README.md  config.yaml  pyproject.toml
templates/template-data-pipeline/data/: sample.csv
templates/template-data-pipeline/pipeline/: __init__.py  config.py  main.py  run.py  utils.py  validate.py
templates/template-data-pipeline/pipeline/stages/: __init__.py  extract.py  load.py  transform.py
templates/template-data-pipeline/src/: __init__.py  models.py  pipeline.py  validators.py
templates/template-data-pipeline/tests/: test_pipeline.py  test_validate.py  test_validators.py
templates/template-eval-harness/: README.md  pyproject.toml
templates/template-eval-harness/config/: eval_config.yaml
templates/template-eval-harness/data/: eval_data.json
templates/template-eval-harness/datasets/: sample_golden.jsonl
templates/template-eval-harness/eval_harness/: __init__.py  config.py  loader.py  main.py  reporter.py  runner.py
templates/template-eval-harness/eval_harness/metrics/: __init__.py  base.py  classification.py  regression.py
templates/template-eval-harness/evals/: graders.py  run_evals.py
templates/template-eval-harness/src/: __init__.py  evaluate.py  metrics.py  models.py
templates/template-eval-harness/tests/: __init__.py  test_eval.py  test_graders.py  test_metrics.py
templates/template-fastapi-service/: Dockerfile  README.md  pyproject.toml
templates/template-fastapi-service/app/: __init__.py  main.py  models.py  predictor.py  routes.py
templates/template-fastapi-service/src/: __init__.py  main.py  models.py
templates/template-fastapi-service/src/routes/: __init__.py  health.py
templates/template-fastapi-service/tests/: __init__.py  test_api.py  test_health.py  test_main.py
templates/template-rag-service/: README.md  pyproject.toml
templates/template-rag-service/data/docs/: sample.txt
templates/template-rag-service/eval/: golden_set.jsonl
templates/template-rag-service/rag/: __init__.py  answer.py  api.py  chunker.py  embedder.py  generator.py  ingest.py  retrieve.py  retriever.py
templates/template-rag-service/src/: __init__.py  api.py  index.py  models.py  rag.py
templates/template-rag-service/tests/: test_rag.py  test_retrieve.py
(+15 files in other folders)
