[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-example"
version = "0.1.0"
description = "Minimal end-to-end ML example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "ruff==0.1.13",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
addopts = "-v --tb=short"
