[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "1.0.0"
description = "A template RAG service with evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies only - add your embedding/LLM libraries as needed
    # Examples:
    # "sentence-transformers>=2.2.0,<3.0.0",
    # "openai>=1.0.0,<2.0.0",
    # "chromadb>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.1.0,<0.4.0",
    "pytest-cov>=4.1.0,<5.0.0",
]
# Add production dependencies as needed
embeddings = [
    "sentence-transformers>=2.2.0,<3.0.0",
]
openai = [
    "openai>=1.0.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*", "eval*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rag", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
