[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "1.0.0"
description = "A minimal RAG service template with evaluation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "ruff>=0.1.0,<1.0.0",
]
# For production, uncomment and add:
# embeddings = [
#     "sentence-transformers>=2.2.0",
#     "openai>=1.0.0",
# ]
# vectorstore = [
#     "chromadb>=0.4.0",
# ]
# llm = [
#     "openai>=1.0.0",
#     "anthropic>=0.7.0",
# ]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
